--- a/ProcessorApp.csproj
+++ b/ProcessorApp.csproj
@@ -52,11 +52,11 @@
     <Compile Include="processorForm.Designer.cs">
       <DependentUpon>processorForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ProcessorsList.cs">
+    <Compile Include="ProcessorsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ProcessorsList.Designer.cs">
-      <DependentUpon>ProcessorsList.cs</DependentUpon>
+    <Compile Include="ProcessorsForm.Designer.cs">
+      <DependentUpon>ProcessorsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Processors.cs" />
     <Compile Include="Processor.cs" />
@@ -65,8 +65,8 @@
     <EmbeddedResource Include="processorForm.resx">
       <DependentUpon>processorForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ProcessorsList.resx">
-      <DependentUpon>ProcessorsList.cs</DependentUpon>
+    <EmbeddedResource Include="ProcessorsForm.resx">
+      <DependentUpon>ProcessorsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
